fix: checkout article information align fix

--- a/bin/css/order.css
+++ b/bin/css/order.css
@@ -483,7 +483,7 @@ table.articles-article {
     border: none;
 }
 
-.articles-article-information-title {
+td.articles-article-information {
     text-align: left;
 }
 
